<resources>
    <string name="app_name">爱信管家</string>
    <string name="tab_home">首页</string>
    <string name="tab_loan">借款</string>
    <string name="tab_news">资讯</string>
    <string name="tab_mine">我的</string>
    <string name="self_worth">我能贷多少</string>
    <string name="operation">operation</string>
    <string name="apply_for_loan">我要借款</string>
    <string name="share">分享</string>
    <string name="profile">个人资料</string>
    <string name="nick_name">昵称</string>
    <string name="phone">手机</string>
    <string name="job_group">职业身份</string>
    <string name="edit_nick_name">修改昵称</string>
    <string name="freelance">自由职业</string>
    <string name="worker">上班族</string>
    <string name="household">个体户</string>
    <string name="forget_psd">忘记密码</string>
    <string name="phone_number">手机号</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="fetch">获取</string>
    <string name="verify_code">验证码</string>
    <string name="input_verify_code">请输入验证码</string>
    <string name="next_step">下一步</string>
    <string name="message_center">消息中心</string>
    <string name="news_recommend">资讯推荐</string>
    <string name="announcement">公告</string>
    <string name="sys_msg">系统消息</string>
    <string name="msg">消息</string>
    <string name="invite_friend">邀请朋友</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="settings">设置</string>
    <string name="change_psd">修改登录密码</string>
    <string name="version_name">版本号</string>
    <string name="star_me">鼓励一下</string>
    <string name="about_us">关于我们</string>
    <string name="exit_safely">安全退出</string>
    <string name="origin_psd">原密码</string>
    <string name="input_origin_psd">请输入原密码</string>
    <string name="new_psd">新密码</string>
    <string name="set_login_psd">请设置6–16位登录密码</string>
    <string name="confirm_new_psd">确认新密码</string>
    <string name="input_new_psd_again">请再次输入新密码</string>
    <string name="confirm_change">确认修改</string>
    <string name="welcome_page">欢迎页</string>
    <string name="know_us">了解爱信管家</string>
    <string name="user_agreement">用户注册协议</string>
    <string name="loan_max_amount">最高额度</string>
    <string name="loan_interests">参考月息</string>
    <string name="loan_time_range">期限范围</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="forget_psd_question">忘记密码?</string>
    <string name="has_account_to_login">已有账号？去登录</string>
    <string name="register_account">请注册你的账号</string>
    <string name="login">登录</string>
    <string name="set_your_psd">请设置你的登录密码</string>
    <string name="invitation_list">邀请明细</string>
    <string name="friends">好友</string>
    <string name="status">状态</string>
    <string name="help">帮助</string>
    <string name="feedback">反馈</string>
    <string name="no_message">暂无消息</string>
    <string name="password">密码</string>
    <string name="comfirm">确认</string>
    <string name="name_qq">QQ</string>
    <string name="name_wechat">微信</string>
    <string name="name_wechat_moment">朋友圈</string>
    <string name="name_weibo">微博</string>
    <string name="login_now">立即登录</string>
    <string name="comfirm_change">确认修改</string>
    <string name="select_profession">选择工作种类</string>
    <string name="refresh_renews">换一换</string>
    <string name="state_empty">暂无消息</string>
    <string name="state_net_error">网络错误</string>
    <string name="reload">重新加载</string>
    <string name="notice">公告</string>
    <string name="submit">提交</string>
    <string name="sys_msg_place_holder">您的最新动态提醒都会出现在这里。</string>
    <string name="notice_place_holder">重要消息都会出现在这里。</string>
    <string name="confirm">确认</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="confirm_new_pwd">请确认新密码</string>
    <string name="loan">借款</string>
    <string name="net_connection_error">网络连接失败</string>
    <string name="check_user_agreement">《爱信管家用户协议》</string>
</resources>
