<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/share_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/share_icon_wechat"
            android:gravity="center_horizontal"
            android:text="@string/name_wechat"
            android:textColor="@color/black_1" />

        <TextView
            android:id="@+id/share_wechat_moment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/share_icon_wechat_moment"
            android:gravity="center_horizontal"
            android:text="@string/name_wechat_moment"
            android:textColor="@color/black_1" />

        <TextView
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/share_icon_qq"
            android:gravity="center_horizontal"
            android:text="@string/name_qq"
            android:textColor="@color/black_1" />

        <TextView
            android:id="@+id/share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="5dp"
            android:drawableTop="@mipmap/share_icon_weibo"
            android:gravity="center_horizontal"
            android:text="@string/name_weibo"
            android:textColor="@color/black_1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black_1"
        android:textSize="16sp" />
</LinearLayout>