<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height">

        <TextView
            style="@style/ToolBarTitleTextAppearance.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_psd" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/origin_psd"
                android:textColor="@color/black_1"
                android:textSize="15sp" />

            <com.beihui.market.view.ClearEditText
                android:id="@+id/origin_psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_origin_psd"
                android:inputType="textPassword"
                android:textColor="@color/black_1"
                android:textColorHint="#b2b2b2"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/new_psd"
                android:textColor="@color/black_1"
                android:textSize="15sp" />

            <com.beihui.market.view.ClearEditText
                android:id="@+id/new_psd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/set_login_psd"
                android:inputType="textPassword"
                android:textColor="@color/black_1"
                android:textColorHint="#b2b2b2"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="103dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/confirm_new_psd"
                android:textColor="@color/black_1"
                android:textSize="15sp" />

            <com.beihui.market.view.ClearEditText
                android:id="@+id/new_psd_confirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/input_new_psd_again"
                android:inputType="textPassword"
                android:textColor="@color/black_1"
                android:textColorHint="#b2b2b2"
                android:textSize="15sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        style="@style/TextButtonStyle"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_alpha_primary_btn"
        android:enabled="false"
        android:text="@string/confirm_change"
        android:textColor="@android:color/white" />
</LinearLayout>