<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height">

        <TextView
            style="@style/ToolBarTitleTextAppearance.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/settings" />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:id="@+id/change_psd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:drawableRight="@mipmap/right_icon"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/change_psd"
        android:textColor="@color/black_1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <LinearLayout
            android:id="@+id/version_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_name"
                android:textColor="@color/black_1" />

            <TextView
                android:id="@+id/version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="8dp"
                android:drawableRight="@mipmap/right_icon"
                android:gravity="right" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <TextView
            android:id="@+id/star_me"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/right_icon"
            android:gravity="center_vertical"
            android:text="@string/star_me"
            android:textColor="@color/black_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <TextView
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/right_icon"
            android:gravity="center_vertical"
            android:text="@string/about_us"
            android:textColor="@color/black_1" />
    </LinearLayout>


    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/exit_safely"
        android:textColor="#FC1313" />
</LinearLayout>