<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textColor="@color/black_1"
                android:textSize="15sp" />


            <com.beihui.market.view.ClearEditText
                android:id="@+id/phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/input_phone_number"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/c_222222"
                android:textColorHint="#B2B2B2"
                android:textSize="15sp"
                tools:ignore="RtlHardcoded" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="20dp"
                android:layout_marginLeft="10dp"
                android:background="@color/line" />

            <TextView
                android:id="@+id/fetch_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:enabled="false"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/fetch"
                android:textColor="@color/color_primary_light_black_enable"
                android:textSize="13sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_code"
                android:textColor="@color/black_1"
                android:textSize="15sp" />


            <com.beihui.market.view.ClearEditText
                android:id="@+id/verify_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:background="@null"
                android:hint="@string/input_verify_code"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@color/c_222222"
                android:textColorHint="#B2B2B2"
                android:textSize="15sp" />

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/next_step"
        style="@style/TextButtonStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_alpha_primary_btn"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@android:color/white" />


</LinearLayout>