<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tool_bar"
        style="@style/ToolBarStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tool_bar_height">

        <TextView
            style="@style/ToolBarTitleTextAppearance.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/about_us" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:src="@drawable/about_us_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/black_1"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/version_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:textColor="@color/c_999999"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/right_icon"
            android:gravity="center_vertical"
            android:text="@string/welcome_page"
            android:textColor="@color/black_1"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <TextView
            android:id="@+id/get_know_us"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/right_icon"
            android:gravity="center_vertical"
            android:text="@string/know_us"
            android:textColor="@color/black_1"
            android:textSize="15sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/common_bg" />

        <TextView
            android:id="@+id/user_agreement"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawableRight="@mipmap/right_icon"
            android:gravity="center_vertical"
            android:text="@string/user_agreement"
            android:textColor="@color/black_1"
            android:textSize="15sp" />

    </LinearLayout>
</LinearLayout>