<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/password"
            android:textColor="@color/black_1" />

        <com.beihui.market.view.ClearEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/set_login_psd"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:textColor="@color/c_222222"
            android:textColorHint="#b3b3b3"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/confirm"
        style="@style/TextButtonStyle"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_alpha_primary_btn"
        android:enabled="false"
        android:text="@string/comfirm"
        android:textColor="@android:color/white" />
</LinearLayout>