<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black_1"
            android:textSize="15sp" />


        <com.beihui.market.view.ClearEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/input_phone_number"
            android:inputType="number"
            android:maxLength="11"
            android:textColor="@color/c_222222"
            android:textColorHint="#B2B2B2"
            android:textSize="15sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="密    码"
            android:textColor="@color/black_1"
            android:textSize="15sp" />


        <com.beihui.market.view.ClearEditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:digits="0123456789qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM"
            android:hint="请输入密码"
            android:inputType="textPassword"
            android:maxLength="16"
            android:textColor="@color/c_222222"
            android:textColorHint="#B2B2B2"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/psd_visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:button="@drawable/eyes_check" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line" />


    <TextView
        android:id="@+id/login"
        style="@style/TextButtonStyle"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_alpha_primary_btn"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="@android:color/white" />


    <TextView
        android:id="@+id/forget_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:gravity="right"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:text="@string/forget_psd_question"
        android:textColor="@color/login1" />

    <TextView
        android:id="@+id/register"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_register_select"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/c_999999"
        android:textSize="14sp" />

</LinearLayout>